--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,5 @@
 browser = chrome
-url = https://client.imejob.com/
+url = http://sumanvi.pythonanywhere.com/
 hardwait = 30
 explicit = 5
 implicit = 5
-url2 = https://imejob.com/
